# rust-hmr-experiment

./: Cargo.toml  README.md  rust-toolchain.toml
README_MEDIA/: memo.txt
example/: Cargo.toml  LICENSE  README.md
example/src/: comp1.rs  comp2.rs  lib.rs  main.rs
hmr-macro/: Cargo.toml
hmr-macro/src/: lib.rs  main.rs
hmr-server/: Cargo.toml
hmr-server/src/: lib.rs  main-legacy.rs  main.rs  modify_glue.rs  parser_linking_section.rs  recompile_module.rs  setup.rs
hmr-server/src/modify_wasm/: mod.rs
test/: apple.rs  test-o.wasm  test.rs
wasm-project/: Cargo.toml  temp_unko.rs
wasm-project/src/: lib.rs  mod1.rs  utils.rs
wasm-project/web-public/: index.html  index.js
