[package]
name = "rust-hmr-experiment"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", optional = true }
console_error_panic_hook = "0.1"
console_log = "1"
cfg-if = "1"
leptos = { version = "0.5", default-features = false, features = ["serde", "nightly", "csr"] }
leptos_axum = { version = "0.5", optional = true }
leptos_meta = { version = "0.5", default-features = false }
leptos_router = { version = "0.5", default-features = false, features = [] }
log = "0.4"
simple_logger = "4"
tokio = { version = "1.33.0", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4", features = ["fs"], optional = true }
wasm-bindgen = "0.2"
thiserror = "1.0.49"
tracing = { version = "0.1.39", optional = true }
http = "0.2.9"
web-sys = "0.3.64"

[lib]
crate-type = ["cdylib", "rlib"]
