[package]
name = "hmr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug-compilation-wasm-pack = []

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
camino = "1.1.6"
clap = "4.4.6"
lazy_static = "1.4.0"
once_cell = "1.18.0"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
walrus = { version = "0.20.3", features = ["parallel"] }
rustc-demangle = "0.1.23"
