[package]
name = "hmr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug-compilation-wasm-pack"]
debug-compilation-wasm-pack = []

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
camino = "1.1.9"
clap = "4.5.38"
lazy_static = "1.5.0"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs"] }
walrus = { version = "0.23.3", features = ["parallel"] }
id-arena = "2.2.1"
rustc-demangle = "0.1.24"
nom = "8.0"
