[package]
name = "wasm-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["console", "Window", "Response"] }
js-sys = "0.3.66"
wasm-bindgen-futures = "0.4.39"
static_cell = "2.0"
leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos_reactive = "0.5"

[lib]
crate-type = ["cdylib", "rlib"]
