[package]
name = "wasm-project"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console", "Window", "Response"] }
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
static_cell = "2.1"
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_reactive = "0.6"
cfg-if = "1.0.0"

[features]
deault = []
separate-comp = []

[lib]
crate-type = ["cdylib", "rlib"]
